--- a/client/src/stylesheets/_dimens.scss
+++ b/client/src/stylesheets/_dimens.scss
@@ -51,7 +51,7 @@ $width-icon-extra-large: 32px;
 $width-icon-extra-large-alt: 40px;
 $width-icon-super-large: 48px;
 
-$width-login-form: 390px;
+$width-login-form: 360px;
 $width-register-form: 520px;
 
 $width-matrix-1d-title: 108px;
@@ -63,6 +63,29 @@ $width-scale-widget-unit: 10px;
 $height-scale-widget-unit-selected: 24px;
 $width-scale-widget-unit-selected: 12px;
 
+$width-scrollbar: 10px;
+
 $duration-slow: .3s;
 $duration-medium: .2s;
 $duration-fast: .1s;
+
+$width-modal-medium: 640px;
+$width-modal-small: 480px;
+$width-modal-extra-small: 320px;
+
+$width-navbar-icon: 24px;
+$height-navbar-icon: 24px;
+
+$radius-blur-medium: 10px;
+$radius-blur-small: 7px;
+$radius-blur-large: 15px;
+
+$radius-spread-medium: -3px;
+$radius-spread-small: -2px;
+$radius-spread-large: -5px;
+$radius-button-border: 2px;
+
+$duration-transition-slow: .4s;
+$duration-transition-medium: .2s;
+$duration-transition-fast: .1s;
+
