--- a/client/src/views/Login/styles.scss
+++ b/client/src/views/Login/styles.scss
@@ -1,13 +1,13 @@
 @import '../../stylesheets/base';
 
+$color-text-on-primary: get-text-color($color-primary);
+
 .login {
     @extend %main-content;
     display: flex;
-    flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    background-color: $color-primary;
 
     .chrono-container {
         display: flex;
@@ -16,30 +16,90 @@
         padding: $spacing-extra-large;
 
         .heading {
-            color: $color-text-on-primary;
+            color: inherit;
+
+            small {
+                text-transform: none;
+            }
         }
     }
 
     .login-form-container {
         display: flex;
+        position: relative;
         flex-direction: column;
-        padding: $spacing-extra-large;
+        margin: $spacing-extra-large;
         width: $width-login-form;
 
+        .hid-link-container {
+            @include background-color($color-foreground);
+            display: flex;
+            flex-basis: 100%;
+            flex-direction: column;
+            align-items: center;
+            padding: $spacing-large;
+
+            .hid-link {
+                display: flex;
+                flex-basis: 100%;
+                align-items: center;
+                margin-bottom: $spacing-large;
+                border: $width-separator-thin solid $color-separator-alt;
+                border-radius: 3px;
+                padding: $spacing-small $spacing-large;
+                font-size: $font-size-medium-alt;
+
+                .logo {
+                    margin-right: $spacing-small;
+                    height: $font-size-medium-alt;
+                }
+            }
+
+            .or-container {
+                position: relative;
+                width: 100%;
+                vertical-align: baseline;
+
+                hr {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    border: $width-separator-thin solid $color-separator;
+                    width: 100%;
+                }
+
+                .or {
+                    @include background-color($color-foreground);
+                    position: absolute;
+                    top: 0;
+                    left: 50%;
+                    transform: translate(-50%);
+                    padding: 0 $spacing-extra-small;
+                    text-transform: uppercase;
+                    font-size: $font-size-small;
+                }
+            }
+        }
+
         .login-form {
-            position: relative;
-            background-color: $color-foreground;
+            @include background-color($color-foreground);
             padding: $spacing-small $spacing-large $spacing-large;
             width: 100%;
 
             .action-buttons {
                 display: flex;
-                align-items: center;
-                justify-content: flex-end;
+                align-items: flex-start;
+                justify-content: space-between;
+
+                .forgot-password-link {
+                    color: $color-text-label;
+                    font-size: $font-size-extra-small;
+                }
             }
         }
 
         .register-link-container {
+            @include background-color($color-foreground);
             display: flex;
             flex-basis: 100%;
             align-items: center;
@@ -48,7 +108,6 @@
             padding: $spacing-large;
 
             p {
-                color: $color-text-on-primary;
                 margin: $spacing-small;
             }
 
