Scss-lint disable for root selector

--- a/client/src/stylesheets/_base.scss
+++ b/client/src/stylesheets/_base.scss
@@ -74,6 +74,7 @@ body {
 
 :global {
     .modal-shown {
+        // scss-lint:disable IdSelector
         #root {
             filter: brightness(50%);
             pointer-events: none;
