--- a/client/src/components/Navbar/styles.scss
+++ b/client/src/components/Navbar/styles.scss
@@ -26,7 +26,9 @@ $color-text-on-primary: get-text-color($color-primary);
     }
 
     .main-menu {
+        display: flex;
         flex-grow: 1;
+        justify-content: center;
         align-self: stretch;
 
         >button {
@@ -101,6 +103,7 @@ $color-text-on-primary: get-text-color($color-primary);
     outline: none;
     border: 0;
     background-color: transparent;
+    color: $color-text;
     cursor: pointer;
     padding: $spacing-medium-alt $spacing-large;
     width: 100%;
@@ -117,7 +120,6 @@ $color-text-on-primary: get-text-color($color-primary);
 
     .label {
         flex-basis: calc(100% - #{$width-icon-extra-large});
-        color: $color-text;
     }
 
     &:hover {
