--- a/client/src/views/Workspace/styles.scss
+++ b/client/src/views/Workspace/styles.scss
@@ -8,6 +8,7 @@ $color-text-on-primary: get-text-color($color-primary);
     flex-direction: column;
 
     .datebar {
+        @include background-color($color-foreground);
         display: flex;
         flex-shrink: 0;
         border-bottom: $width-separator-thin solid $color-separator-alt;
@@ -22,18 +23,19 @@ $color-text-on-primary: get-text-color($color-primary);
 
     .information {
         display: flex;
-        flex-grow: 1;
         flex-direction: column;
+        flex-grow: 1;
         border-bottom: $width-separator-thin solid $color-separator-alt;
 
         .datewrapper {
+            border-bottom: $width-separator-thin solid $color-separator-alt;
             padding: $spacing-medium;
             width: 100%;
-            border-bottom: $width-separator-thin solid $color-separator-alt;
         }
     }
 
     .bottom {
+        @include background-color($color-foreground);
         display: flex;
         flex-shrink: 0;
         border-top: $width-separator-thin solid $color-separator-alt;
