Handle save for slot

--- a/client/src/views/Workspace/styles.scss
+++ b/client/src/views/Workspace/styles.scss
@@ -42,7 +42,7 @@ $color-text-on-primary: get-text-color($color-primary);
 
             .left {
                 display: flex;
-                flex-basis: 10%;
+                width: 80px;
 
                 .date {
                     padding: $spacing-extra-small $spacing-small;
