--- a/client/src/components/AddProject/styles.scss
+++ b/client/src/components/AddProject/styles.scss
@@ -1,4 +1,4 @@
-@import '../../../stylesheets/base';
+@import '../../stylesheets/base';
 
 .project-add-form {
     @include background-color($color-foreground);
