Add Edit UserGroup details

--- a/client/src/views/UserGroups/styles.scss
+++ b/client/src/views/UserGroups/styles.scss
@@ -13,7 +13,11 @@
 
         .detail {
 
-            .name {
+            .title {
+                display: flex;
+            }
+
+            .description {
                 display: flex;
             }
         }
