--- a/client/src/components/AddProject/styles.scss
+++ b/client/src/components/AddProject/styles.scss
@@ -5,18 +5,12 @@
     padding: $spacing-small $spacing-large $spacing-large;
     width: 100%;
 
-    .usergroup {
-        margin-right: $spacing-large;
-    }
-
     .action-buttons {
         display: flex;
-        align-items: flex-start;
-        justify-content: space-between;
+        justify-content: flex-end;
 
-        .forgot-password-link {
-            color: $color-text-label;
-            font-size: $font-size-extra-small;
+        .action-button {
+            margin-left: $spacing-small;
         }
     }
 }
