--- a/client/src/views/UserGroups/UserGroupProjects/ActionButtons/styles.scss
+++ b/client/src/views/UserGroups/UserGroupProjects/ActionButtons/styles.scss
@@ -3,9 +3,9 @@
 %link {
     display: inline-block;
     padding: 0 $spacing-small;
-    color: $color-text-label;
 }
 
 .project-link {
     @extend %link;
+    color: $color-warning;
 }
