Add year and month selector

--- a/client/src/views/Workspace/styles.scss
+++ b/client/src/views/Workspace/styles.scss
@@ -15,7 +15,15 @@ $color-text-on-primary: get-text-color($color-primary);
         padding: $spacing-small;
 
         .date {
-            font-family: $font-family-monospace;
+            display: flex;
+
+            >*{
+                margin-right: $spacing-small;
+            }
+
+            .year, .month {
+                flex-basis: 48px;
+            }
         }
     }
 
