Use MultiViewContainer for dashboard

--- a/client/src/views/Workspace/SlotEditor/styles.scss
+++ b/client/src/views/Workspace/SlotEditor/styles.scss
@@ -2,7 +2,7 @@
 
 $slot-editor-height: 130px;
 
-.message {
+.message-box {
     @include background-color($color-foreground);
     flex-shrink: 0;
     height: $slot-editor-height;
