Add Task Edit/Add Project

--- a/client/src/views/Workspace/SlotEditor/styles.scss
+++ b/client/src/views/Workspace/SlotEditor/styles.scss
@@ -51,6 +51,9 @@ $slot-editor-height: 130px;
                 .task {
                     margin-left: $spacing-large;
                 }
+                .tag {
+                    margin-left: $spacing-large;
+                }
 
                 .remarks {
                     flex-grow: 1;
